[tool.poetry]
name = "gg_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^2.6.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pre-commit = "^2.16.0"
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.910"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
